--- a/ledger/ledger_html/f_ledger.html
+++ b/ledger/ledger_html/f_ledger.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="/static/libs/bootstrap-4.5.0/bootstrap.min.css">
     <script src="/static/libs/jquery-3.5.1.min.js"></script>
     <script src="/static/libs/bootstrap-4.5.0/bootstrap.bundle.min.js"></script>
-    <script src="{{ url_for('ledger.static',filename='f_ledger_father.js') }}"></script>
+    <script src="{{ url_for('ledger.static',filename='f_ledger.js') }}"></script>
     <title>账本</title>
     <style>
+        #main_container {
+            max-width: 1600px;
+        }
+
         .table td, .table th {
             max-width: 15rem;
             vertical-align: middle;
@@ -45,10 +49,11 @@
             background-color: #FACEBE;
         }
 
+
         #add {
             position: fixed;
-            bottom: 2rem;
-            right: 2rem;
+            bottom: 10%;
+            right: 10%;
             width: 3rem;
             height: 3rem;
             cursor: pointer;
@@ -57,13 +62,86 @@
 </head>
 
 <body>
-    <div class="container" id="main_container"></div>
-    <a href="/ledger/father/modify">
-        <svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" id="add">
+    <div class="container" id="main_container">
+        {% for message in get_flashed_messages() %}
+            <div class="alert alert-success mt-4">{{ message }}</div>
+        {% endfor %}
+    </div>
+    <div class="modal fade" id="count_checked_modal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h6 class="modal-title">勾选项合计</h6>
+                    <button type="button" class="close" data-dismiss="modal">
+                        <span>&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body"></div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="count_staff_modal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h6 class="modal-title">人员项合计</h6>
+                    <button type="button" class="close" data-dismiss="modal">
+                        <span>&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-row">
+                        <div class="col form-group">
+                            <label for="year">年份</label>
+                            <input class="form-control" type="text" id="year">
+                        </div>
+                        <div class="col form-group">
+                            <label for="month">月份</label>
+                            <input class="form-control" type="text" id="month">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="query_sort">查询类别</label>
+                        <select class="form-control" id="query_sort">
+                            <option>经手人</option>
+                            <option>出账人</option>
+                            <option>进账人</option>
+                            <option>审核人</option>
+                        </select>
+                    </div>
+                    <button type="button" class="btn btn-primary btn-block" id="query">查询</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="count_year_modal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h6 class="modal-title">年份统计</h6>
+                    <button type="button" class="close" data-dismiss="modal">
+                        <span>&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body"></div>
+            </div>
+        </div>
+    </div>
+    <div class="dropdown">
+        <svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" id="add"
+             class="dropdown-toggle"
+             data-toggle="dropdown">
             <path d="M512 958.017c-119.648 0-232.129-46.368-316.737-130.56C110.623 743.202 64 631.201 64 512.002c0-119.169 46.624-231.2 131.232-315.425 84.608-84.191 197.089-130.56 316.737-130.56s232.129 46.369 316.704 130.56c84.672 84.225 131.263 196.256 131.263 315.392 0.033 119.2-46.591 231.233-131.263 315.455C744.13 911.616 631.648 958.017 512 958.017z m0-828.034c-102.624 0-199.072 39.744-271.583 111.937C167.937 314.048 128 409.984 128 512s39.903 197.952 112.384 270.047c72.512 72.192 168.96 111.937 271.583 111.937 102.593 0 199.072-39.744 271.584-111.937 72.48-72.16 112.416-168.063 112.384-270.08 0-102.016-39.904-197.919-112.384-270.016C711.07 169.76 614.593 129.983 512 129.983z"></path>
             <path d="M736 480H544V288c0-17.664-14.335-32-32-32s-32 14.336-32 32v192H288c-17.664 0-32 14.337-32 32.002s14.336 32 32 32h192v192c0 17.696 14.337 32.001 32.002 32.001s32-14.303 32-32V544h192c17.696 0 32.001-14.336 32.001-32.001s-14.306-32-32.002-32z"></path>
         </svg>
-    </a>
+        <div class="dropdown-menu">
+            <a class="dropdown-item" href="/ledger/father/modify/add">添加记录</a>
+            <button class="dropdown-item" type="button" id="count_checked">统计勾选项</button>
+            <button class="dropdown-item" type="button" id="count_staff">统计人员项</button>
+            <button class="dropdown-item" type="button" id="count_year">按年统计</button>
+        </div>
+    </div>
+    <div hidden id="all_offset">{{ all_offset }}</div>
 </body>
 
 </html>
