--- a/ledger/ledger_html/f_ledger.html
+++ b/ledger/ledger_html/f_ledger.html
@@ -4,9 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/libs/bootstrap-4.5.0/bootstrap.min.css">
-    <script src="/static/libs/jquery-3.5.1.min.js"></script>
-    <script src="/static/libs/bootstrap-4.5.0/bootstrap.bundle.min.js"></script>
+    {% include 'libs.html' %}
     <script src="{{ url_for('ledger.static',filename='f_ledger.js') }}"></script>
     <title>账本</title>
     <style>
