--- a/ledger/ledger_html/f_ledger.html
+++ b/ledger/ledger_html/f_ledger.html
@@ -48,7 +48,7 @@
         }
 
 
-        #add {
+        #add_icon {
             position: fixed;
             bottom: 10%;
             right: 10%;
