--- a/ledger/ledger_html/ledger.html
+++ b/ledger/ledger_html/ledger.html
@@ -54,7 +54,8 @@
             <div class="card mb-4 month_card">
                 <div class="card-body">
 
-                    <div class="card-title month_title">
+                    <div class="card-title month_title"
+                         data-toggle="collapse" data-target="#collapse_{{ monthly_data['month_time'] }}">
                         <h2>{{ monthly_data['month_time'] }}</h2>
                         <table class="table table-borderless month_table">
                             <tbody>
@@ -72,35 +73,38 @@
                         </table>
                     </div>
 
-                    {% set daily_data_collection=monthly_data['daily_data_collection'] %}
-                    {% for day_time,daily_data in daily_data_collection.items() %}
-                        <div class="day_card">
-                            <hr class="mb-1">
-                            <div class="day_div text-muted mb-1">
-                                <div class="day_date">{{ day_time }}</div>
-                                <div class="day_out_sum">{{ monthly_data['daily_sta_collection'][day_time]['out_sum'] }}</div>
+                    <div class="day_card_collection collapse {% if i==0 %}show{% endif %} "
+                         id="collapse_{{ monthly_data['month_time'] }}">
+                        {% set daily_data_collection=monthly_data['daily_data_collection'] %}
+                        {% for day_time,daily_data in daily_data_collection.items() %}
+                            <div class="day_card">
+                                <hr class="mb-1">
+                                <div class="day_div text-muted mb-1">
+                                    <div class="day_date">{{ day_time }}</div>
+                                    <div class="day_out_sum">{{ monthly_data['daily_sta_collection'][day_time]['out_sum'] }}</div>
+                                </div>
+                                {% for e in daily_data %}
+                                    {% if e['sort']=='支出' %}
+                                        <div class="outcome alert alert-success mb-1" data-id="{{ e['id'] }}">
+                                            <div class="alert_first_row">
+                                                <div class="sort_detail">{{ e['sort_detail'] }}</div>
+                                                <div class="amount">{{ e['amount'] }}</div>
+                                            </div>
+                                            <div class="note text-muted small">{{ e['note'] }}</div>
+                                        </div>
+                                    {% elif e['sort']=='收入' %}
+                                        <div class="income alert alert-danger mb-1" data-id="{{ e['id'] }}">
+                                            <div class="alert_first_row">
+                                                <div class="sort_detail">{{ e['sort_detail'] }}</div>
+                                                <div class="amount">{{ e['amount'] }}</div>
+                                            </div>
+                                            <div class="note text-muted">{{ e['note'] }}</div>
+                                        </div>
+                                    {% endif %}
+                                {% endfor %}
                             </div>
-                            {% for e in daily_data %}
-                                {% if e['sort']=='支出' %}
-                                    <div class="outcome alert alert-success mb-1" data-id="{{ e['id'] }}">
-                                        <div class="alert_first_row">
-                                            <div class="sort_detail">{{ e['sort_detail'] }}</div>
-                                            <div class="amount">{{ e['amount'] }}</div>
-                                        </div>
-                                        <div class="note text-muted small">{{ e['note'] }}</div>
-                                    </div>
-                                {% elif e['sort']=='收入' %}
-                                    <div class="income alert alert-danger mb-1" data-id="{{ e['id'] }}">
-                                        <div class="alert_first_row">
-                                            <div class="sort_detail">{{ e['sort_detail'] }}</div>
-                                            <div class="amount">{{ e['amount'] }}</div>
-                                        </div>
-                                        <div class="note text-muted">{{ e['note'] }}</div>
-                                    </div>
-                                {% endif %}
-                            {% endfor %}
-                        </div>
-                    {% endfor %}
+                        {% endfor %}
+                    </div>
                 </div>
             </div>
         {% endfor %}
