日常账本-1.32 修复12月份数据库查询出错的bug

--- a/ledger/ledger_html/ledger.html
+++ b/ledger/ledger_html/ledger.html
@@ -62,12 +62,12 @@
                             <tr class="text-success">
                                 <td>支出</td>
                                 <td class="month_out_sum">{{ monthly_data['month_sta']['out_sum'] }}</td>
-                                <td class="month_out_num">{{ monthly_data['month_sta']['out_num'] }}</td>
+                                <td class="month_out_num pr-0">{{ monthly_data['month_sta']['out_num'] }}</td>
                             </tr>
                             <tr class="text-danger">
                                 <td>收入</td>
                                 <td class="month_in_sum">{{ monthly_data['month_sta']['in_sum'] }}</td>
-                                <td class="month_in_num">{{ monthly_data['month_sta']['in_num'] }}</td>
+                                <td class="month_in_num pr-0">{{ monthly_data['month_sta']['in_num'] }}</td>
                             </tr>
                             </tbody>
                         </table>
