用户系统-1.1 添加注册页面真名input

--- a/user/user_html/register.html
+++ b/user/user_html/register.html
@@ -100,7 +100,12 @@
                                            id="confirm_password" class="form-control">
                                 {% endif %}
                             </div>
-                            <input type="submit" value="注册" class="form-control btn btn-primary">
+                            <div class="form-group">
+                                <label for="real_name">真实姓名</label>
+                                <input type="text" name="real_name" id="real_name" class="form-control"
+                                       placeholder="如果你不认识Sora可以不填">
+                            </div>
+                            <input type="submit" value="注册" class="form-control btn btn-primary mt-3">
                         </form>
                     </div>
                 </div>
