--- a/v2ray/interface.html
+++ b/v2ray/interface.html
@@ -29,6 +29,7 @@
             $('#node_address_m').val(node['address']);
             $('#node_port_m').val(node['port']);
             $('#node_level_m').val(node['node_level']);
+            $('#node_status_m').val(node['node_status']);
             if (node['relay_address'] != null) {
                 $('#relay_enable_m').prop('checked', true);
                 $('#relay_address_m').prop('disabled', false);
@@ -152,6 +153,7 @@
         <div class="card mt-3">
             <div class="card-header">节点列表</div>
             <div class="card-body">
+                <p>可用节点为绿色，不可用节点为红色。由于节点状态目前为Sora手动更新，所以可能存在滞后和不准确，具体节点可用状态还是以自己测试使用为准。</p>
                 <table class="table table-hover table-responsive-sm">
                     <thead>
                     <tr>
@@ -174,7 +176,12 @@
                     </thead>
                     {% for i in range(node_info|length) %}
                         {% set e = node_info[i] %}
-                        <tr>
+                        {% if e['node_status']==0 %}
+                            {% set node_status_class="table-danger" %}
+                        {% else %}
+                            {% set node_status_class="table-success" %}
+                        {% endif %}
+                        <tr class="{{ node_status_class }}">
                             <td>
                                 {{ e['order_'] }}
                                 {% if user_info['user_level']==admin_level %}
@@ -365,9 +372,17 @@
                                                    class="form-control relay_port" placeholder="中转端口" disabled>
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                        <input type="text" name="node_level_m" id="node_level_m" class="form-control"
-                                               placeholder="节点等级">
+                                    <div class="form-row">
+                                        <div class="form-group">
+                                            <label for="node_level_m">节点等级</label>
+                                            <input type="text" name="node_level_m"
+                                                   id="node_level_m" class="form-control" placeholder="节点等级">
+                                        </div>
+                                        <div class="col form-group">
+                                            <label for="node_status_m">节点可用性</label>
+                                            <input class="form-control" type="text" name="node_status_m"
+                                                   id="node_status_m" placeholder="可用为1">
+                                        </div>
                                     </div>
                                     <input type="hidden" name="node_id">
                                     <input type="submit" value="修改" class="form-control btn btn-primary">
