v2ray-1.0 正式版发布&添加简易教程

--- a/v2ray/interface.html
+++ b/v2ray/interface.html
@@ -110,6 +110,7 @@
                             http://sorapage.com/v2ray/subscribe/{{ user_info['uuid'] }}
                         </a>
                     </p>
+                    <p>简易教程：<a href="/v2ray/tutorial" target="_blank">Link</a></p>
                 </div>
             </div>
         </div>
