v2ray-1.1 接入评论系统

--- a/v2ray/v2ray_tutorial.html
+++ b/v2ray/v2ray_tutorial.html
@@ -46,7 +46,7 @@
                 </section>
                 <section>
                     <h5>Step-4 Http代理</h5>
-                    <p>参数设置-->Core:路由设置-->Http代理-->开启Http代理，并自动配置系统代理(全局模式)-->确定</p>
+                    <p>参数设置-->Core:基础设置-->Http代理-->开启Http代理，并自动配置系统代理(全局模式)-->确定</p>
                 </section>
                 <section>
                     <h5>Step-5 切换节点</h5>
