--- a/v2ray/v2ray_tutorial.html
+++ b/v2ray/v2ray_tutorial.html
@@ -21,7 +21,6 @@
             <section>
                 <h1 class="d-flex justify-content-center">v2ray简易起飞指南</h1>
                 <p>由于当前时间和精力有限，只能先写个简易版的教程，不过根据以往的经验你们都是太长不看的类型，简易版说不定更适合</p>
-                <p>PS: header部分实在没时间做，所以预留的都是空链接，你们点不动是很正常的</p>
             </section>
             <section class="my-4">
                 <h2>PC端</h2>
@@ -31,7 +30,7 @@
                         老规矩，先放github项目<a href="https://github.com/2dust/v2rayN" target="_blank">链接</a>,会用github的自己去release里下载
                     </p>
                     <p>
-                        也可以从我的服务器上获取，<a href="/v2ray/clients/v2rayN-Core.zip">点此下载</a>3.29版本
+                        也可以从我的服务器上获取，<a href="/v2ray/clients/v2rayN-Core.zip">点此下载</a>4.12版本
                     </p>
                 </section>
                 <section>
@@ -42,11 +41,11 @@
                 </section>
                 <section>
                     <h5>Step-3 路由</h5>
-                    <p>参数设置-->Core:路由设置-->预定义规则-->绕过局域网及大陆地址-->一键设置自定义路由规则-->确定</p>
+                    <p>设置-->路由设置-->基础功能-->一键导入基础规则-->确定</p>
                 </section>
                 <section>
-                    <h5>Step-4 Http代理</h5>
-                    <p>参数设置-->Core:基础设置-->Http代理-->开启Http代理，并自动配置系统代理(全局模式)-->确定</p>
+                    <h5>Step-4 系统代理</h5>
+                    <p>在任务栏找到v2rayN的图标-->右键图标-->系统代理-->自动配置系统代理</p>
                 </section>
                 <section>
                     <h5>Step-5 切换节点</h5>
@@ -64,6 +63,11 @@
                 <h2>IOS端</h2>
                 <p>Shadowrocket主页面-->右上角+号-->类型-->Subscribe-->URL直接粘贴订阅链接&备注随便填-->完成</p>
                 <p>单击某行节点进行切换-->测试Google或Youtube-->Enjoy</p>
+            </section>
+            <section class="my-4">
+                <h2>Android端</h2>
+                <p>没有Android设备，没有教程</p>
+                <p>可以去Google一下别人写的 v2rayNG 的使用教程</p>
             </section>
         </article>
     </div>
